PL/Projecto/tests/good/25.nx
foreach i in 0..9 do
{
  print(i); print(i);
}
