PL/Projecto/tests/bad/11.nx
foreach i in range(-5) do print(i);
